overlay/simple-build-deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensift-examples
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"openshift-examples:latest","namespace":"examples-openshift"},"fieldPath":"spec.template.spec.containers[?(@.name==\"web\")].image"}]'
  labels:
    app.kubernetes.io/component: opensift-examples
    app.kubernetes.io/instance: opensift-examples
    app.kubernetes.io/part-of: opensift-examples
    app.openshift.io/runtime: openshift
    app: opensift-examples
spec:
  progressDeadlineSeconds: 30
  replicas: 1
  selector:
    matchLabels:
      app: opensift-examples
  template:
    metadata:
      labels:
        app: opensift-examples
    spec:
      containers:
      - name: web
        image: quay.io/openshift-examples/web:master
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8081
      - name: nginx-prometheus-exporter
        image: docker.io/nginx/nginx-prometheus-exporter:latest
        readinessProbe:
          httpGet:
            path: /
            port: 9113
        ports:
          - name: metrics
            containerPort: 9113
        args:
          - -nginx.scrape-uri=http://localhost:8081/
